# validation

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .rat-excludes  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  NOTICE.txt  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: dev.yaml  dev_issues.yaml  dev_pr.yaml  test.yaml
adbc_drivers_validation/: __init__.py  arrowjson.py  compare.py  generate_documentation.py  model.py  query_metadata.py  quirks.py  txtcase.py  utils.py  variant.py
adbc_drivers_validation/queries/ingest/: binary.toml  binary.txtcase  binary_view.input.schema.json  binary_view.schema.json  binary_view.txtcase  boolean.input.json  boolean.input.schema.json  boolean.txtcase  date.input.json  date.input.schema.json  date.txtcase  decimal.input.json  decimal.input.schema.json  decimal.txtcase  decimal_scale_equals_precision.txtcase  decimal_scale_negative.txtcase  decimal_scale_zero.txtcase  fixed_size_binary.input.json  fixed_size_binary.input.schema.json  (+46 more)
adbc_drivers_validation/templates/: features.md  features.qmd  footnotes.md  types.md  types.qmd
adbc_drivers_validation/tests/: conftest.py  connection.py  ingest.py  misc.py  query.py  statement.py  test_arrowjson.py  test_connection.py  test_get_table_schema.py  test_ingest.py  test_query.py  test_statement.py  test_transactions.py
tests/: test_arrowjson.py  test_compare.py  test_generate_documentation.py  test_model.py  test_query_metadata.py  test_queryset.py  test_quirks.py  test_txtcase.py  test_utils.py  test_variant.py
(+293 files in other folders)
