# Copyright (c) 2025 ADBC Drivers Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "adbc-drivers-validation"
version = "0.1"
requires-python = ">=3.13"

dependencies = [
  "adbc-driver-manager>=1.6.0,<2",
  "bidict>=0.23.1,<1.0.0",
  "duckdb>=1.4.1,<2",
  "jinja2>=3.1.6,<4",
  "pyarrow>=22.0.0,<23",
  "pytest>=8.4.1,<10",
  "whenever>=0.9.3,<0.10",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
